# pokus-task

./: .gitignore  DESIGN.md  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  render.yaml
apps/agents/: .dockerignore  .env.example  Dockerfile  langgraph.json  pyproject.toml  requirements.txt
apps/agents/src/: __init__.py  main.py  task_registry.py
apps/agents/src/agents/: medicine.py  supervisor.py  travel.py
apps/agents/src/utils/: __init__.py  web_search.py
apps/web/: .dockerignore  .env.example  Dockerfile  next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/copilotkit/: route.ts
apps/web/app/chat/: page.tsx
apps/web/components/providers/: CopilotKitProvider.tsx
apps/web/components/tasks/medicine/: CallSimulation.tsx  MedicineSearchStatus.tsx  PharmacyCard.tsx
apps/web/components/tasks/travel/: ItineraryDay.tsx  PreferencesCard.tsx  TravelSearchStatus.tsx
apps/web/components/ui/: badge.tsx  spinner.tsx
apps/web/lib/: hooks.ts  utils.ts
docs/: ARCHITECTURE.md  ASSUMPTIONS_AND_TRADEOFFS.md  DIAGRAMS.md
