[project]
name = "pokus-agents"
version = "0.1.0"
description = "Multi-agent system for real-world task completion"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
dev = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
